src/App.css
:root{
    --Textcolor: #121212;
    --mainColor: #ffaa00;

}
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
    color: var(--Textcolor);
}
.darkMode{
    --Textcolor: #ffff;
    --mainColor: #ffaa00;
    background: #2c1904;

    
}
a{
    text-decoration: none;
    color: inherit;
}
ul{
    list-style: none;
}
i{
    color: var(--mainColor);
    font-size: 20px;
}
i:hover{
    color: var(--Textcolor);
}
button{
    padding: 5px 15px;
    background-color: var(--mainColor);
    color: var(--Textcolor);
    border: none;
    border-radius: 10px;
    
}
button:hover{
    color: var(--mainColor);
    background: var(--Textcolor);
}



@media(max-width:1000px){
    button{
        padding: 5px 8px;
    }
}
@media(max-width:864px){
    .container{
        margin-top: 320px;
    }
}
@media(max-width:405px){
    .container{
        margin-top: 360px;
    }
}
@media(max-width:360px){
    .container{
        margin-top: 400px;
    }
}

